--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 - [[#license][License]]
 
 * Installation
-Install the package with ~raco pkg install --auto typed-miniKanren~.
+Install the package with ~raco pkg install --auto miniKanren-typed~.
 
 * License
 This project is distributed under the MIT License; see [[file:LICENSE]] for
